day 2 and refactoring

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -7,7 +7,8 @@
             "type": "process",
             "args": [
                 "build",
-                "${workspaceFolder}/aoc23.sln",
+                "--no-restore",
+                "${workspaceFolder}/Day3/Day3.csproj",
                 "/property:GenerateFullPaths=true",
                 "/consoleloggerparameters:NoSummary;ForceNoAlign"
             ],
